05/1과제/alb.tf
resource "aws_lb" "alb" {
  name               = "gj2026-alb"
  internal           = true
  load_balancer_type = "application"
  security_groups    = [data.aws_security_group.alb.id]
  subnets            = [data.aws_subnet.private_a.id, data.aws_subnet.private_b.id]

  enable_cross_zone_load_balancing = true
}

resource "aws_lb_target_group" "book" {
  name        = "gj2026-book-tg"
  port        = 8080
  protocol    = "HTTP"
  vpc_id      = data.aws_vpc.vpc.id
  target_type = "ip"

  health_check {
    path     = "/health"
    protocol = "HTTP"
    matcher  = "200"
  }
}

resource "aws_lb_target_group" "grafana" {
  name        = "gj2026-grafana-tg"
  port        = 3000
  protocol    = "HTTP"
  vpc_id      = data.aws_vpc.vpc.id
  target_type = "ip"

  health_check {
    path     = "/grafana/api/health"
    protocol = "HTTP"
    matcher  = "200"
  }
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.book.arn
  }
}

resource "aws_lb_listener_rule" "grafana" {
  listener_arn = aws_lb_listener.http.arn
  priority     = 1

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.grafana.arn
  }

  condition {
    path_pattern {
      values = ["/grafana*"]
    }
  }
}
